--- a/writing/_cogsci2016/habituals-cogsci2016.bib
+++ b/writing/_cogsci2016/habituals-cogsci2016.bib
@@ -5,10 +5,94 @@
 % Modified : Eli M. Silk (esilk at pitt.edu)            05/24/2005
 % Modified : David Noelle (dnoelle at ucmerced.edu)     11/19/2014
 
-@unpublished{TesslerUnderReview, 
-  author = {Tessler, Michael Henry and Goodman, Noah D}, 
-  title = {A pragmatic theory of generic language}, 
-  year = {under review} 
+@phdthesis{Carlson1977,
+  author       = {Carlson, G. N.}, 
+  title        = {Reference to kinds in English},
+  school       = {University of Massachusetts, Amherst},
+  year         = 1977,
+}
+
+@book{Carlson1995,
+  author    = {Carlson, G. N. and Pelletier, F. J.}, 
+  title     = {The generic book.},
+  publisher = {Chicago University Press},
+  year      = 1995,
+  address   = {Chicago, IL}
+}
+
+@incollection{Carlson2005,
+  author = {Carlson, G. N.},
+  booktitle = {The Encyclopedia of Language and Linguistics},
+  edition = {2nd},
+  title = {{Generics, Habituals and Iteratives}},
+  year = {2005}
+}
+
+
+@book{Clark1996,
+  author    = {Clark, Herb H.}, 
+  title     = {Using language},
+  publisher = {Cambridge University Press},
+  year      = 1996
+ }
+
+@article{Cohen1999,
+  author = {Cohen, Ariel},
+  issn = {0165-0157},
+  journal = {Linguistics and Philosophy},
+  title = {{Generics, Frequency Adverbs, and Probability}},
+  volume = {22},
+  year = {1999}
+}
+
+@inproceedings{Degen2014, 
+  author = {Degen, Judith and Goodman, Noah D.}, 
+  booktitle = {Proceedings of the Thirty-Sixth Annual Conference of the {C}ognitive {S}cience {S}ociety}, 
+  title = {Lost your marbles? The puzzle of dependent measures in experimental pragmatics}, year = {2014} 
+}
+
+@inproceedings{Degen2015,
+  author = {Degen, Judith and Tessler, Michael Henry and Goodman, Noah D},
+  booktitle = {Proceedings of the 37th Annual Conference of the Cognitive Science Society},
+  title = {{Wonky worlds: Listeners revise world knowledge when utterances are odd}},
+  year = {2015}
+}
+
+@inbook{Gelman2004, 
+  author = {Gelman, Susan A.}, 
+  booktitle = {Weaving a lexicon}, 
+  publisher = {MIT Press}, 
+  title = {Learning words for kinds: Generic noun phrases in acquisition}, 
+  year = {2004},
+  city= {Cambridge, MA},
+  pages = {445-484}
+}
+
+
+@inbook{Goodman2015a, 
+  author = {Goodman, Noah D. and Lassiter, Daniel}, 
+  booktitle = {The Handbook of Contemporary Semantic Theory, 2nd Edition}, 
+  editor = {Lappin, Shalom and Fox, Chris}, 
+  publisher = {Wiley-Blackwell}, 
+  title = {Probabilistic Semantics and Pragmatics: Uncertainty in Language and Thought}, 
+  year = {2015} 
+}
+@inbook{Goodman2015b,
+  author = {Goodman, Noah D and Tenenbaum, Joshua B and Gerstenberg, T}, 
+  booktitle = {The Conceptual Mind: New Directions in the Study of Concepts}, 
+  publisher = {MIT Press}, 
+  title = {Concepts in a probabilistic language of thought}, 
+  year = {2015} 
+}
+
+
+
+@inbook{Grice1975, 
+  author = {Grice, H. P.}, 
+  booktitle = {Readings in language and mind}, 
+  publisher = {Blackwell}, 
+  title = {Logic and conversation.}, 
+  year = {1975}
 }
 
 @article{Griffiths2005,
@@ -32,88 +116,6 @@
   publisher={Taylor \& Francis}
 }
 
-@article{Cohen1999,
-  author = {Cohen, Ariel},
-  issn = {0165-0157},
-  journal = {Linguistics and Philosophy},
-  title = {{Generics, Frequency Adverbs, and Probability}},
-  volume = {22},
-  year = {1999}
-}
-
-@inbook{Goodman2015a, 
-  author = {Goodman, Noah D. and Lassiter, Daniel}, 
-  booktitle = {The Handbook of Contemporary Semantic Theory, 2nd Edition}, 
-  editor = {Lappin, Shalom and Fox, Chris}, 
-  publisher = {Wiley-Blackwell}, 
-  title = {Probabilistic Semantics and Pragmatics: Uncertainty in Language and Thought}, 
-  year = {2015} 
-}
-@inbook{Goodman2015b,
-  author = {Goodman, Noah D and Tenenbaum, Joshua B and Gerstenberg, T}, 
-  booktitle = {The Conceptual Mind: New Directions in the Study of Concepts}, 
-  publisher = {MIT Press}, 
-  title = {Concepts in a probabilistic language of thought}, 
-  year = {2015} 
-}
-
-@inbook{Gelman2004, 
-  author = {Gelman, Susan A.}, 
-  booktitle = {Weaving a lexicon}, 
-  publisher = {MIT Press}, 
-  title = {Learning words for kinds: Generic noun phrases in acquisition}, 
-  year = {2004},
-  city= {Cambridge, MA},
-  pages = {445-484}
-}
-
-@inbook{Grice1975, 
-  author = {Grice, H. P.}, 
-  booktitle = {Readings in language and mind}, 
-  publisher = {Blackwell}, 
-  title = {Logic and conversation.}, 
-  year = {1975}
-}
-
-@book{Levinson2000,
-  author    = {Levinson, Stepehen}, 
-  title     = {Presumptive meanings: The theory of generalized conversational implicature},
-  publisher = {The MIT Press},
-  year      = 2000
- }
-
-@book{Clark1996,
-  author    = {Clark, Herb H.}, 
-  title     = {Using language},
-  publisher = {Cambridge University Press},
-  year      = 1996
- }
-
-
-@incollection{Carlson2005,
-  author = {Carlson, G. N.},
-  booktitle = {The Encyclopedia of Language and Linguistics},
-  edition = {2nd},
-  title = {{Generics, Habituals and Iteratives}},
-  year = {2005}
-}
-
-@book{Carlson1995,
-  author    = {Carlson, G. N. and Pelletier, F. J.}, 
-  title     = {The generic book.},
-  publisher = {Chicago University Press},
-  year      = 1995,
-  address   = {Chicago, IL}
-}
-
-@phdthesis{Carlson1977,
-  author       = {Carlson, G. N.}, 
-  title        = {Reference to kinds in English},
-  school       = {University of Massachusetts, Amherst},
-  year         = 1977,
-}
-
-
 @article{Leslie2008,
   author = {Leslie, Sarah-Jane},
   journal = {Philosophical Review},
@@ -123,6 +125,15 @@
   year = {2008}
 }
 
+@book{Levinson2000,
+  author    = {Levinson, Stepehen}, 
+  title     = {Presumptive meanings: The theory of generalized conversational implicature},
+  publisher = {The MIT Press},
+  year      = 2000
+}
+
+
+
 @book{LW2014,
   author    = {Lee, M. D. and Wagenmakers, E. J.}, 
   title     = {Bayesian Cognitive Modeling: A Practical Course},
@@ -130,6 +141,14 @@
   year      = 2014,
   address   = {Cambridge}
 }
+
+
+@unpublished{TesslerUnderReview, 
+  author = {Tessler, Michael Henry and Goodman, Noah D}, 
+  title = {A pragmatic theory of generic language}, 
+  year = {under review} 
+}
+
 
 % -----------------------------------------------------------------------
 % Document End
