--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -22,6 +22,8 @@
 \usepackage{wrapfig}
 \usepackage{lipsum}
 
+ \newcommand{\denote}[1]{\mbox{ $[\![ #1 ]\!]$}}
+
 \graphicspath{{figures/}}
 
 \def\signed #1{{\leavevmode\unskip\nobreak\hfil\penalty50\hskip2em
@@ -60,6 +62,7 @@ In Expt.~2, we explore the nature of ``frequency'' conditions by manipulating X 
 events; generics; pragmatics
 \end{abstract}
 
+
 \section{Introduction}
 
 Generics sentences (e.g. \emph{Swans are white.}) describe generalizations about categories and are believed to be central to how we communicate and learn about categories \cite{Carlson1977, Gelman2004}.
@@ -71,9 +74,68 @@ A recent theory of generic language posits a simple, basic meaning of a generic 
 
 \section{Computational model}
 
-\section{Experiment 1}
+Habituals express a relation between an individual (e.g. \textsc{Bill}) and an event (e.g. \textsc{smoking}), in an analogous way to how generics express a relation between a kind (e.g. \textsc{robins}) and a property (e.g. \textsc{lays eggs}) \cite{Carlson1995}. 
+\citeA{TesslerUnderReview} recently showed a computational model with a simple semantics based on the property prevalence (e.g. the proportion of robins that lay eggs), coupled with basic communicative pressures to be truthful and informative, accounted well for puzzling phenomena surrounding generic language.
+We apply this same model to habituals, adopting as the underlying scale the frequency of the event.
+ 
+For a given individual $B$ (e.g.~\textsc{Bill}) and an event $E$ (e.g.~\textsc{smoking}), we refer to the probability that individual $B$ will partake in event $E$, that is $P(E\mid B)$, as the \emph{frequency} of $E$ for $B$.
+It is not clear at this point whether this frequency is a retrospective (how often has Bill smoked in the past) or a prospective frequency (how often to I expect Bill to smoke in the future); for the time being, we assume time is \emph{homogenous} with respect to past and present (i.e. however often Bill has smoked in the past will be how often he smokes in the future). 
+Herein lies an interesting deviation from generic language about natural kinds: Natural kinds change over the course of biological time. 
+People, on the other hand, develop from babies to children to adults and elderly adults; People make resolutions to explicitly change their behavior and people discover things about themselves that cause them to change behavior. 
+These higher-order beliefs about the stationarity of time with respect to events will no doubt influence speakers judgments of habituals. 
+We will explore these higher-order beliefs later when we relax the \emph{homogeneity assumption}. 
+
+The semantics of a habitual sentence is a simple threshold on frequency $P(E\mid B)>\tau$ \cite<c.f.>{Cohen1999}.
+We suggest that this threshold is not a fixed property of the language, however, but is established by pragmatic inference.
+This inference depends on event and person knowledge, but like generics, follows from a general mechanism of language.
+We imagine a hypothetical, pragmatic listener ($L_1$) concerned with learning the frequency of a certain event for a certain individual B, $x=P(E \mid B)$, who reasons about an informative speaker ($S_1$), who in turn reasons about a literal listener ($L_0$):
+\begin{eqnarray}
+P_{L_{1}}(x , \tau \mid u) &\propto& P_{S_{1}}(u \mid x, \tau) \cdot P(x) \cdot P(\tau) \label{eq:L1}\\
+P_{S_{1}}(u \mid x, \tau) &\propto&  {P_{L_{0}}(x \mid u, \tau)}^{\lambda} \label{eq:S1}\\
+P_{L_{0}}(x \mid u, \tau) &\propto& {\delta_{\denote{u}(x, \tau)} P(x)}. \label{eq:L0}
+\end{eqnarray}
+
+The pragmatic listener $L_1$ (Eq.~\ref{eq:L1}) is a model of interpreting habituals: Upon hearing a habitual, what frequency is a listener likely to infer?
+We can now imagine a speaker $S_2$ who reasons about this type of listener: 
+
+\begin{equation} 
+P_{S_{2}}(u \mid x) \propto  \int_{\theta} P_{L_{1}}(x , \tau \mid u)
+\label{eq:S2}
+\end{equation}
+
+Speaker $S_2$ is a model of felicity or truth judgments \cite{Degen2014, TesslerUnderReview}.
+The speaker considers the thought-processes of listener $L_1$ (Eq.~\ref{eq:L1}) and decides if the habitual is a good (albeit, vague) way to describe the frequency $x$. 
+$S_2$'s decision is with respect to the alternative of saying nothing: He will choose to produce the habitual when the true frequency $x$ is more likely under $L_1$'s posterior than under her prior. 
+Critically, speaker $S_{2}$ doesn't actually know what the habitual means (i.e. doesn't have access to the threshold $\tau$), but knows that $L_{1}$ will have to consider it, and integrates over the likely values she'll consider.
+
+
+\section{Experiment 1: predicting truth judgments}
+
+
+
+
+\subsection{Method}
+\subsubsection{Participants}
+\subsubsection{Procedure}
+\subsubsection{Materials}
+
+\subsection{Behavioral results}
+
+\subsection{Model results}
+
 
 \section{Experiment 2}
+
+\subsection{Method}
+\subsubsection{Participants}
+\subsubsection{Procedure}
+\subsubsection{Materials}
+
+\subsection{Behavioral results}
+
+\subsection{Model results}
+
+
 
 \section{Discussion}
 
