add bridge to expt2

--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -155,7 +155,14 @@ Judgments were obtained for N items, of which each participants saw a random sel
 
 \section{Experiment 2}
 
+In Expt.~1, we saw how a model designed to describe generic language (e.g. \emph{Swans are white.}) can describe habitual language (e.g. \emph{John smokes}) equally as well by specifying the underlying degree as the frequency with which an individuals performs an action.
+Unlike natural kinds, individuals can modify their behaviors overnight.  
+In Expt.~2, we explore how knowledge of certain causal factors (e.g. the age of the individual; the intent of the individual when performing the action) modulate the veracity of habitual sentences, 
+These results suggest the underlying scale for habituals is \emph{predictive} frequency of action, and that habituals are used to talk about future predictions of people's actions.
+
 \subsection{Method}
+
+
 \subsubsection{Participants}
 \subsubsection{Procedure}
 \subsubsection{Materials}
