--- a/analysis/habitual-priors2-BDA.Rmd
+++ b/analysis/habitual-priors2-BDA.Rmd
@@ -28,7 +28,7 @@ options("scipen"=10)
 ```{r}
 filePath <- "~/Documents/research/habituals/models/priors/results/"
 prefix <- "priors2-existenceQ-betaModel-incrMH"
-samples <- 10000
+samples <- 100000
 burn <- samples / 2
 m<- as.data.frame.matrix(fread(paste(filePath, prefix, 
                    samples/1000, "k_burn", 
@@ -44,7 +44,9 @@ m.params<-m.samples %>% filter(Parameter!='predictive')
 
 ggplot(m.params,aes(x=Value, fill=Gender))+
   geom_histogram(position=position_dodge())+
-  facet_grid(Item~Parameter, scales='free')
+  facet_grid(Item~Parameter, scales='free')+
+  theme(strip.text.y = element_text(angle=0))
+
 
 ggsave(paste(filePath, "plots/priors2-existence-", prefix, 
                    samples/1000, "k_burn", 
@@ -59,38 +61,81 @@ ggsave(paste(filePath, "plots/priors2-existence-", prefix,
 ```{r}
 m.predictive<-m.samples %>% filter(Parameter=='predictive')
 
-ggplot(m.predictive,aes(x=Value))+
-  geom_histogram()+
-  facet_wrap(~Item, scales='free')
+ggplot(m.predictive,aes(x=Value, fill=Gender))+
+  geom_histogram(position=position_dodge(), binwidth=0.03)+
+  facet_wrap(~Item, scales='fixed')+
+  xlab("% of Americans who ___")
 
 ggsave(paste(filePath, "plots/priors2-existence-predictive-", prefix, 
                    samples/1000, "k_burn", 
                    burn/1000, "k.pdf", sep=""))
 
 
-
-used.in.tj<- c("bikes to work",
-               "drinks beer",
-               "drives to work",
-               "eats granola for breakfast",
-               "hikes",
-               "plays computer games",
-               "runs",
-               "smokes",
-               "steals cars",
-               "vacations in Switzerland",
-               "writes novels",
-               "writes poems")
-
-ggplot(m.predictive %>% filter(Item%in%used.in.tj), aes(x=Value))+
-  geom_histogram(binwidth=0.03)+
-  #geom_density()+
-  facet_wrap(~Item, scales='fixed')+
-  xlab("% of Americans who ___")
+# fig.path <- "~/Documents/research/habituals/talks/lab-mtg-120115/images/"
+# ggsave(paste(fig.path, "existentialQ-bda-histogram-priors1.pdf", sep=""), width = 8, height =5)
+```
 
 
-fig.path <- "~/Documents/research/habituals/talks/lab-mtg-120115/images/"
-ggsave(paste(fig.path, "existentialQ-bda-histogram-priors1.pdf", sep=""), width = 8, height =5)
+### Model - data fit
+
+
+```{r}
+d<-read.csv("~/Documents/research/habituals/data/priors/priors-2.csv")
+
+scaleTime2 <- list(
+  week = 7,
+  month = 30,
+  year = 365,
+  "5 years" = 5*365
+)
+
+d.tidy<- d %>% 
+  select(workerid, category, item, ends_with("_men"), ends_with("_women")) %>%
+  mutate(menFreq = nPersons_men / comparisonNum_men,
+         womenFreq = nPersons_women / comparisonNum_women) %>%
+  rowwise() %>%
+  mutate(menRate = scaleTime2[[as.character(comparisonTime_men)]]/nInstances_men,
+         womenRate = scaleTime2[[as.character(comparisonTime_women)]]/nInstances_women) %>%
+  mutate(menRate = ifelse(menRate==Inf, 5*365, menRate),
+         womenRate = ifelse(womenRate==Inf, 5*365, womenRate))
+
+
+# create histogram from responses
+d.freq<- d.tidy %>%
+  select(item, menFreq, womenFreq) %>%
+  gather(Gender, Human, menFreq, womenFreq) %>%
+  mutate(Gender = factor(Gender, levels=c("menFreq", "womenFreq"),
+                         labels=c("male", "female"))) %>%
+  rename(Item = item) %>%
+  mutate(Bin = round(Human, digits = 1)) %>%
+  mutate(Bin = factor(Bin)) %>%
+  group_by(Item, Gender, Bin) %>%
+  summarize(count = length(Human)) %>%
+  ungroup() %>%
+  group_by(Item, Gender) %>%
+  mutate(norm_count = count / sum(count)) %>%
+  select(-count)
+
+
+m.freq <- m.predictive %>% 
+  mutate(Bin = round(Value, 1)) %>%
+  mutate(Bin = factor(Bin)) %>%
+  group_by(Item, Gender, Bin) %>%
+  summarize(count = length(Value)) %>%
+  ungroup() %>%
+  group_by(Item, Gender) %>%
+  mutate(model_count = count / sum(count)) %>%
+  select(-count)
+
+md.freq<- left_join(m.freq, d.freq)
+md.freq[is.na(md.freq$norm_count),]$norm_count <- 0
+
+ggplot(md.freq, aes(x=model_count, y=norm_count, color = Bin))+
+  geom_point()+
+  geom_abline(intercept = 0, slope = 1, lty = 2)+
+  coord_fixed()
+
+with(md.freq, cor(model_count, norm_count))^2
 ```
 
 
@@ -98,14 +143,14 @@ ggsave(paste(fig.path, "existentialQ-bda-histogram-priors1.pdf", sep=""), width 
 # Frequency question
 
 ```{r freq.load}
-prefix <- "frequencyQ-logNormalModel-workdayForWork-incrMH"
+prefix <- "waitQ-logNormalModel-incrMH"
 samples <- 100000
 burn <- samples / 2
 m2<- as.data.frame.matrix(fread(paste(filePath, prefix, 
                    samples/1000, "k_burn", 
                    burn/1000, "k.csv",sep="")))
 
-m2.samples <- m2[rep(row.names(m2), m2$Probability*(samples-burn)), 1:4]
+m2.samples <- m2[rep(row.names(m2), m2$Probability*(samples-burn)), 1:5]
 ```
 
 ### Posterior over parameters
@@ -113,61 +158,34 @@ m2.samples <- m2[rep(row.names(m2), m2$Probability*(samples-burn)), 1:4]
 ```{r}
 m2.params<-m2.samples %>% filter(Parameter!='predictive')
 
-ggplot(m2.params,aes(x=Value))+
+ggplot(m2.params,aes(x=Value, fill=Gender))+
   geom_histogram()+
   facet_grid(Item~Parameter, scales='free')+
   theme(strip.text.y = element_text(angle=0))
 
-ggsave(paste(filePath, "plots/frequency-parameters-", prefix, 
+
+ggsave(paste(filePath, "plots/priors2-frequency-parameters-", prefix, 
                    samples/1000, "k_burn", 
                    burn/1000, "k.pdf", sep=""), height = 14, width = 7)
 
 
 m2.params.stats <- m2.params %>%
-  group_by(Parameter, Item) %>%
+  group_by(Parameter, Item, Gender) %>%
   summarize(MAP = estimate_mode(Value),
             credHigh = HPDhi(Value),
             credLow = HPDlo(Value))
 
-ggplot(filter(m2.params.stats, Parameter == 'mix'), 
-       aes(x=Item, y=MAP))+
-  geom_bar(stat='identity', position=position_dodge(),
-           fill='grey69')+
+ggplot(m2.params.stats,
+       aes(x=Item, y=MAP, fill=Gender))+
+  geom_bar(stat='identity', position=position_dodge())+
   geom_errorbar(aes(ymin = credLow, ymax = credHigh),
                 position=position_dodge())+
   facet_wrap(~Parameter)+
   coord_flip()
 
-ggsave(paste(filePath, "plots/frequency-mix-stats-", prefix, 
+ggsave(paste(filePath, "plots/priors2-frequency-stats-", prefix, 
                    samples/1000, "k_burn", 
                    burn/1000, "k.pdf", sep=""), height = 8, width = 10)
-
-ggplot((m2.params.stats %>% filter(Parameter%in%c("mu", "mu2"))), 
-       aes(x=Item, y=MAP))+
-  geom_bar(stat='identity', position=position_dodge(),
-           fill='grey69')+
-  geom_errorbar(aes(ymin = credLow, ymax = credHigh),
-                position=position_dodge())+
-  facet_wrap(~Parameter)+
-  ylim(-10,10)+
-  coord_flip()
-ggsave(paste(filePath, "plots/frequency-means-stats-", prefix, 
-                   samples/1000, "k_burn", 
-                   burn/1000, "k.pdf", sep=""), height = 6, width = 14)
-
-
-ggplot(m2.params.stats, aes(x=Item, y=MAP))+
-  geom_bar(stat='identity', position=position_dodge(),
-           fill='grey69')+
-  geom_errorbar(aes(ymin = credLow, ymax = credHigh),
-                position=position_dodge())+
-  facet_wrap(~Parameter)+
-  coord_flip()
-
-ggsave(paste(filePath, "plots/frequency-parameters-stats-", prefix, 
-                   samples/1000, "k_burn", 
-                   burn/1000, "k.pdf", sep=""), height = 8, width = 14)
-
 ```
 
 
@@ -177,195 +195,74 @@ ggsave(paste(filePath, "plots/frequency-parameters-stats-", prefix,
 ```{r}
 m2.predictive<-m2.samples %>% filter(Parameter=='predictive')
 
-ggplot(m2.predictive,aes(x=Value))+
-  geom_histogram()+
+ggplot(m2.predictive,aes(x=Value, fill=Gender))+
+  geom_histogram(position=position_dodge())+
   facet_wrap(~Item, scales='fixed')+
-  xlim(-15,15)
+  xlim(-5,15)
 
-ggsave(paste(filePath, "plots/frequency-log-predictive-", prefix, 
+ggsave(paste(filePath, "plots/priors2-frequency-log-predictive-", prefix, 
                    samples/1000, "k_burn", 
                    burn/1000, "k.pdf", sep=""), width =14, height = 6)
 
 
-ggplot(m2.predictive,aes(x=exp(Value)/52))+
-  geom_histogram()+
+ggplot(m2.predictive,aes(x=exp(Value), fill=Gender))+
+  geom_histogram(position=position_dodge())+
   facet_wrap(~Item, scales='fixed')+
-  xlim(0,10)
+  xlim(0,1500)
+
 
 ggsave(paste(filePath, "plots/frequency-predictive-", prefix, 
                    samples/1000, "k_burn", 
                    burn/1000, "k.pdf", sep=""), width =14, height = 6)
 
-
-items<-levels(factor(m2.predictive$Item))
-
-ggplot(m2.predictive %>% 
-         filter(Item == "smokes"),aes(x=exp(Value)/365))+
-  geom_histogram()
-
-ggplot(m2.predictive %>% filter(Item == items[1]), aes(x=exp(Value)))+
-  geom_histogram()+
-  xlim(0,500)
-
-ggplot(m2.predictive %>% filter(Item == items[3]), aes(x=exp(Value)))+
-  geom_histogram()+
-  xlim(0,500)
-
-ggplot(m2.predictive %>% filter(Item == items[4]), aes(x=exp(Value)))+
-  geom_histogram()+
-  xlim(0,500)+
-  ggtitle(items[4])
-
-ggplot(m2.predictive %>% filter(Item == items[5]), aes(x=exp(Value)))+
-  geom_histogram()+
-  xlim(0,500)+
-  ggtitle(items[5])
-
-ggplot(m2.predictive %>% filter(Item == items[6]), aes(x=exp(Value)))+
-  geom_histogram()+
-  xlim(0,500)+
-  ggtitle(items[6])
-
-ggplot(m2.predictive %>% filter(Item == items[7]), aes(x=exp(Value)))+
-  geom_histogram()+
-  xlim(0,500)+
-  ggtitle(items[7])
-
-
-
-ggplot(m2.predictive %>% filter(Item%in%used.in.tj), aes(x=Value))+
-  geom_histogram()+
-  #geom_density()+
-  facet_wrap(~Item, scales='fixed')+
-  xlab("Log Frequency")+
-  xlim(-10,10)
-
-
-ggsave(paste(fig.path, "frequency-bda-histogram-priors1.pdf", sep=""), width = 7, height =4)
 ```
 
-By item prevalence levels
+# Model--data fit
 
 ```{r}
-items <- levels(factor(m2.predictive$Item))
-
-i = "fails at things"
-m.item <- m2.predictive %>% filter(Item==i)
-quantile(exp(m.item$Value), probs = c(0.25, 0.5,0.75))
-quantile(exp(m.item$Value), probs = seq(0,1,0.1))
-
-
-```
-
-## Discretized posterior predictive 
-
-```{r}
-filePath <- "~/Documents/research/habituals/models/priors/results/"
-prefix <- "predictive-freq-logNormalModel-workdayForWork-incrMH"
-samples <- 100000
-burn <- samples / 2
-
-m<- as.data.frame.matrix(fread(paste(filePath, prefix, 
-                   samples/1000, "k_burn", 
-                   burn/1000, "k.csv",sep=""), header=T))
-
-# m<-read.csv(paste(filePath, prefix, 
-#                    samples/1000, "k_burn", 
-#                    burn/1000, "k.csv",sep=""), header=T)
-
-m.samples <- m[rep(row.names(m), m$Probability*(samples-burn)), 1:length(names(m))-1]
-
-m.tidy <- m.samples %>%
-  gather(Bin, Value, -Item) %>%
-  group_by(Item, Bin) %>%
-  summarise(MAP = mean(Value)) %>%
-#   summarise(MAP = estimate_mode(Value),
-#             credHigh = HPDhi(Value),
-#             credLow = HPDlo(Value)) %>%
+# create histogram from responses
+d.rate<- d.tidy %>%
+  select(item, menRate, womenRate) %>%
+  gather(Gender, Human, menRate, womenRate) %>%
+  mutate(Gender = factor(Gender, levels=c("menRate", "womenRate"),
+                         labels=c("male", "female"))) %>%
+  rename(Item = item) %>%
+  mutate(Bin = round(log(Human), digits = 0)) %>%
+  mutate(Bin = factor(Bin)) %>%
+  group_by(Item, Gender, Bin) %>%
+  summarize(count = length(Human)) %>%
   ungroup() %>%
-  mutate(Bin = factor(round(to.n(Bin),2)))
-```
-
-
-### Load human data
-
-```{r}
-d<-read.csv("~/Documents/research/habituals/data/priors/priors-1.csv")
-
-min_bin<-min(to.n(levels(m.tidy$Bin)))
-max_bin<-max(to.n(levels(m.tidy$Bin)))
-
-nearestBin <- function(x){
-  return(levels(m.tidy$Bin)[
-    round(length(levels(m.tidy$Bin))*(x-min_bin)/(max_bin-min_bin))
-    ])
-}
-
-scaleTime <- list(
-  day = 365,
-  ## day is ambiguous between work-day and day of the week
-  week = 52,
-  month = 12,
-  year = 1,
-  life = 1/80
-)
-
-d[(d$item=='drives to work' & d$timeWindow=='day'),]$nTimes <- d[(d$item=='drives to work' & d$timeWindow=='day'),]$nTimes * 5
-d[(d$item=='drives to work' & d$timeWindow=='day'),]$timeWindow <- "week"
-
-d[(d$item=='bikes to work' & d$timeWindow=='day'),]$nTimes <- d[(d$item=='bikes to work' & d$timeWindow=='day'),]$nTimes * 5
-d[(d$item=='bikes to work' & d$timeWindow=='day'),]$timeWindow <- "week"
-
-d.tidy<-d %>% 
-  mutate(timeWindow = as.character(timeWindow)) %>%
-  rowwise() %>%
-  mutate(frequency = nTimes*scaleTime[[timeWindow]]) %>%
-  ungroup()
-
-d.tidy[d.tidy$frequency==0,]$frequency<-0.01
-
-d.out<-d.tidy %>% 
-  select(-category, -trial_type, -rt) %>%
-  mutate(logFreq = log(frequency)) %>%
-  rowwise() %>%
-  mutate(roundedLogFreq = nearestBin(logFreq))
-
-```
-
-## Join human data with model
-
-```{r}
-
-d.stats <- d.out %>%
-  ungroup() %>%
-  group_by(item, roundedLogFreq) %>%
-  summarize(count = length(trial_num)) %>%
-  ungroup() %>%
-  group_by(item) %>%
+  group_by(Item, Gender) %>%
   mutate(norm_count = count / sum(count)) %>%
+  select(-count)
+
+
+
+m.rate <- m2.predictive %>% 
+  mutate(Bin = round(Value, 0)) %>%
+  mutate(Bin = factor(Bin)) %>%
+  group_by(Item, Gender, Bin) %>%
+  summarize(count = length(Value)) %>%
   ungroup() %>%
-  rename(Item = item,
-         Bin = roundedLogFreq)
+  group_by(Item, Gender) %>%
+  mutate(model_count = count / sum(count)) %>%
+  select(-count)
 
-prior.md<-left_join(m.tidy, d.stats)
-prior.md[is.na(prior.md$norm_count),]$norm_count <- 0
+md.rate<- left_join(m.rate, d.rate)
+md.rate[is.na(md.rate$norm_count),]$norm_count <- 0
 
-prior.md <- prior.md %>%
-  mutate(Bin = factor(Bin))
-
-
-ggplot(prior.md, aes(x=MAP, y = norm_count, color=Bin))+
+ggplot(md.rate, aes(x=model_count, y=norm_count, color = Bin))+
   geom_point()+
-  geom_abline(intercept =0, slope=1,linetype=2)+
-  #geom_errorbarh(aes(xmin=credLow, xmax=credHigh), position=position_dodge())+
-  xlab("Posterior predictive of prior model")+
-  ylab("Normalized counts of human responses")+
-  coord_fixed()
+  geom_abline(intercept = 0, slope = 1, lty = 2)+
+  coord_fixed()+
+  xlim(-0.05,1.05)+
+  ylim(-0.05,1.05)
 
-#ggsave(file='~/Documents/research/generics/manuscript/figures/postPred-priorModel.pdf')
+with(md.rate, cor(model_count, norm_count))^2
 
-with(prior.md, cor(MAP, norm_count))^2
 
-# Check outliers
-View(prior.md %>% filter(norm_count < .2 & MAP > .18))
+md.rate<- md.rate %>%
+  mutate(sqErr = (model_count - norm_count)^2)
+
+View(md.rate)
 ```
