fig1; disc for expt1a; methods for expt1b

--- a/writing/_cogsci2016/habituals-cogsci2016.bib
+++ b/writing/_cogsci2016/habituals-cogsci2016.bib
@@ -58,6 +58,14 @@
   year = {2015}
 }
 
+@misc{dippl,
+  title = {{The Design and Implementation of Probabilistic Programming Languages}},
+  author = {Goodman, Noah D and Stuhlm\"{u}ller, Andreas},
+  year = {2014},
+  howpublished = {\url{http://dippl.org}},
+  note = {Accessed: 2015-12-30}
+}
+
 @inbook{Gelman2004, 
   author = {Gelman, Susan A.}, 
   booktitle = {Weaving a lexicon}, 
